--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           tags: |
             type=schedule,pattern={{date 'YYYYMMDD'}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=ref,event=tag
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push
