schedule testing, running every 5min here for the hour.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,9 @@
-name: ci
-
 on:
   push:
     tags:
       - 'v*'
-    schedule:
-      - cron: '5 16 * * *'
+  schedule:
+    - cron: '*/5 16 * * *'
 
 env:
   REGISTRY: ghcr.io
