--- a/.github/workflows/daily-image.yml
+++ b/.github/workflows/daily-image.yml
@@ -1,5 +1,6 @@
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
+    inputs:
       tags:
         description: 'Test scenario tags'
         required: false 
