--- a/.github/workflows/daily-image.yml
+++ b/.github/workflows/daily-image.yml
@@ -2,7 +2,7 @@ on:
   workflow_dispatch:
     inputs:
       tags:
-        description: 'Test scenario tags'
+        description: 'Optional input tag'
         required: false 
         type: string
 
@@ -39,7 +39,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           tags: |
-            type=schedule,pattern={{date 'YYYYMMDD'}}
+            type=raw,enable=true,priority=200,prefix=,suffix={{date 'YYYYMMDD'}},value=${{ inputs.tags }}
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push
