--- a/.github/workflows/daily-image.yml
+++ b/.github/workflows/daily-image.yml
@@ -39,7 +39,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           tags: |
-            type=raw,enable=true,priority=200,prefix=,suffix={{ date 'YYYYMMDD' }},value=${{ inputs.docker_tag }}
+            type=raw,enable=true,priority=200,prefix=,suffix=-{{ date 'YYYYMMDD' }},value=${{ inputs.docker_tag }}
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push
